fixes alignment and spcaing issues of icons and day, time, contact info

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,4 @@
 .locations {
-    /* margin: 10px; */
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -17,8 +16,6 @@
 
 .address_container {
     grid-area: a;
-    /* text-align: justify; */
-    /* margin-left: 30px; */
 }
 
 .address_container > h3 {
@@ -27,19 +24,18 @@
 
 .address {
     display: flex;
-    /* text-align: justify; */
 }
 
 .day {
     position: relative;
-    margin-top: 20px;
+    margin: 20px 0px 20px 0px;
     display: flex;
     justify-self: left;
 }
 
 .time {
     position: relative;
-    margin-top: 20px;
+    margin: 20px 0px 20px 20px;
     display: flex;
     justify-self: right;
 }
@@ -50,7 +46,6 @@
     flex-direction: column;
     color: #a9846a;
     font-weight: 300;
-    /* font-size: 10px; */
     gap: 5px;
 }
 
@@ -61,14 +56,12 @@
     text-align: justify;
     color: #a9846a;
     font-weight: 300;
-    /* font-size: 10px; */
     gap: 5px;
 }
 
 .contact_location {
     grid-area: e;
     margin: 20px 0px 20px 20px;
-    /* margin-left: 50px; */
     display: flex;
     justify-self: right;
 }
@@ -80,7 +73,6 @@
     flex-direction: column;
     color: #a9846a;
     font-weight: 300;
-    font-size: 10px;
     gap: 5px;
 }
 
@@ -97,6 +89,10 @@
     max-height: 400px;
     width: 100%;
     margin-bottom: 50px;
+}
+
+.icon_space {
+    padding-left: 10px;
 }
 
 .contact_form_container {
